# HumansVsGoblinsEngine

./: CMakeLists.txt  LICENSE.txt  README.md
Docs/ErrorHandling/: ErrorHandling.md
Docs/Map/: Map.md
Docs/ObjectModel/: ObjectModel.md
Docs/PropertiesFileFormat/: PropertiesFileFormat.md  PropertiesFileParser.md  SyntaxDiagramPropertiesFileFormat.drawio
Src/: CArray.c  CArray.h  Camera.c  Camera.h  EngineAPI.h  FileSystem.c  FileSystem.h  Map.c  Map.h  MathUtils.c  MathUtils.h  Physics.c  Physics.h  PropertiesFileParser.c  PropertiesFileParser.h  RayCasting.c  RayCasting.h  RenderMap2D.c  RenderMap2D.h  RenderMap2_5D.c  RenderMap2_5D.h  Texture.c  Texture.h  Window.c  Window.h
Tests/: CMakeLists.txt
Tests/Test_CArray/: Test_CArray.c
Tests/Test_PropertiesFileParser/: Test_PropertiesFileParser.c
Tests/Test_PropertiesFileParser/TestFiles/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  SUMMARY.txt
