
# This function adds a source/header file to the project. 
# SRCS_VAR   - is the variable where all source files are written
# PROJ_GROUP - group in the project. For example filters in Visual Studio or other IDE. This group folders must be separated by \\
# FILE_PATH  - file to be added
# Example call AddSrcFile(SRCS YLE\\Src Src/main.c)
function(AddFile SRCS_VAR PROJ_GROUP FILE_PATH)
	#message("source_group(${PROJ_GROUP} FILES ${FILE_PATH})")
	source_group(${PROJ_GROUP} FILES ${FILE_PATH})
	set(${SRCS_VAR} ${${SRCS_VAR}} ${FILE_PATH} PARENT_SCOPE)
endfunction()

# Test_CArray
set(TEST_CARRAY_SRCS "")
AddFile(TEST_CARRAY_SRCS Src Test_CArray/Test_CArray.c)
AddFile(TEST_CARRAY_SRCS Src ../Src/CArray.h)
AddFile(TEST_CARRAY_SRCS Src ../Src/CArray.c)
add_executable(Test_CArray ${TEST_CARRAY_SRCS})
add_test(NAME Test_CArray COMMAND Test_CArray)

# Test_PropertiesFileParser
set(TEST_PROPERTIES_FILE_PARSER_SRCS "")
AddFile(TEST_PROPERTIES_FILE_PARSER_SRCS Src Test_PropertiesFileParser/Test_PropertiesFileParser.c)
AddFile(TEST_PROPERTIES_FILE_PARSER_SRCS Src ../Src/CArray.h)
AddFile(TEST_PROPERTIES_FILE_PARSER_SRCS Src ../Src/CArray.c)
AddFile(TEST_PROPERTIES_FILE_PARSER_SRCS Src ../Src/PropertiesFileParser.h)
AddFile(TEST_PROPERTIES_FILE_PARSER_SRCS Src ../Src/PropertiesFileParser.c)
add_executable(Test_PropertiesFileParser ${TEST_PROPERTIES_FILE_PARSER_SRCS})
add_test(NAME Test_PropertiesFileParser COMMAND Test_PropertiesFileParser)

configure_file(Test_PropertiesFileParser/TestFiles/0.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/0.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/1.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/1.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/2.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/2.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/3.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/3.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/4.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/4.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/5.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/5.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/6.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/6.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/7.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/7.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/8.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/8.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/9.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/9.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/10.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/10.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/11.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/11.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/12.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/12.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/13.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/13.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/14.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/14.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/15.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/15.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/16.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/16.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/17.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/17.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/18.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/18.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/19.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/19.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/20.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/20.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/21.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/21.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/22.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/22.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/23.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/23.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/24.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/24.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/25.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/25.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/26.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/26.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/27.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/27.txt" COPYONLY)
configure_file(Test_PropertiesFileParser/TestFiles/28.txt "${PROJECT_BINARY_DIR}/Tests/Test_PropertiesFileParser_TestFiles/28.txt" COPYONLY)
